# stack

./: CMakeLists.txt  log.txt  main.cpp  torage != nullptr)
include/: config.h  dump.h  hash.h  protect.h  stack.h  stack_functions.h  stack_methods.h
prototyping/: prototyping.cpp  prototyping.h
src/: config.cpp  dump.cpp  hash.cpp  protect.cpp  stack.cpp  stack_functions.cpp  stack_methods.cpp  stack_production.cpp
